--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <div class="col-6 col-md-4 mb-lg-4 mb-3 product-item">
                 <h3>product03</h3>
                 <p>Lorem, ipsum dolor.</p>
-                <button class="btn-success">Add To Cart</button>
+                <button class="btn-success btn">Add To Cart</button>
               </div>
               <div class="col-6 col-md-4 mb-lg-4 mb-3 product-item">
                 <h3>product04</h3>
